some styling issues on smaller screens were resolved

--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,4 @@
-$general-size-limit: 950px;
 #mainContent-helpConserve {
-    min-width: 450px;
     max-width: 700px;
 }
 $padding-space: 20px;
@@ -14,15 +12,15 @@ table, th, td {
     padding: 10px;
 }
 table {
-    width: 100%;
+    table-layout: fixed;
     th {
         border-bottom: 2px solid black;
-        max-width: 50px;
     }
     td {
-        max-width: 50px;
+        width: 33.3%;
     }
 }
+$general-size-limit: 950px;
 .size-limit {
     max-width: $general-size-limit;
 }
