--- a/styles0.css
+++ b/styles0.css
@@ -1,5 +1,4 @@
 #mainContent-helpConserve {
-  min-width: 450px;
   max-width: 700px;
 }
 
@@ -15,14 +14,13 @@ table, th, td {
 }
 
 table {
-  width: 100%;
+  table-layout: fixed;
 }
 table th {
   border-bottom: 2px solid black;
-  max-width: 50px;
 }
 table td {
-  max-width: 50px;
+  width: 33.3%;
 }
 
 .size-limit {
